# psync

./: .gitignore  CLAUDE.md  README.md  psync.py  pyproject.toml
bench/: bench.sh  bench_hash.py  bench_large.sh  bench_network.sh  bench_rolling.py  benchmark.py
tests/: conftest.py  test_core.py  test_integration.py  test_slow_net.py
